# MyproImage

./: CMakeLists.txt  README.md
data/: CalibrationTest.txt  vocabulary.xml
include/: RGBDImage.h
src/: RGBDImage.cpp  main.cpp
